20250913_daily_arXiv_update

--- a/arxiv/2025_09_arxiv.html
+++ b/arxiv/2025_09_arxiv.html
@@ -91,6 +91,62 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03575">https://arxiv.org/abs/2509.03575</a></span> Ferromagnetism vs. Antiferromagnetism in Narrow-Band Systems: Competition Between Quantum Geometry and Band Dispersion ***** (Haoyu Hu, Oskar Vafek, Kristjan Haule, B. Andrei Bernevig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03683">https://arxiv.org/abs/2509.03683</a></span> Attention is all you need to solve chiral superconductivity ***** (Chun-Tse Li, Tzen Ong, Max Geier, Hsin Lin, Liang Fu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03936">https://arxiv.org/abs/2509.03936</a></span> Two-dimensional coherent spectroscopy of disordered superconductors in the narrow-band and broad-band limits (Naoto Tsuji)</p>
+<br>
+<p class="p1">20250908</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04641">https://arxiv.org/abs/2509.04641</a></span> Strongly Entangled Kondo and Kagome Lattices and the Emergent Magnetic Ground State in Heavy-Fermion Kagome Metal YbV6Sn6 ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04902">https://arxiv.org/abs/2509.04902</a></span> Coexisting Kagome and Heavy Fermion Flat Bands in YbCr6Ge6 ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04561">https://arxiv.org/abs/2509.04561</a></span> Dirac quantum criticality in twisted double bilayer transition metal dichalcogenides *** (Jan Biedermann, Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04596">https://arxiv.org/abs/2509.04596</a></span> A systematic search for conformal field theories in very small spaces *** (Xiang Li, Ting-Chun Lin, John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04571">https://arxiv.org/abs/2509.04571</a></span> Superconducting pairing symmetries in charge-ordered kagomé metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04581">https://arxiv.org/abs/2509.04581</a></span> Symmetric entanglers for non-invertible SPT phases ***** (Minyoung You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04947">https://arxiv.org/abs/2509.04947</a></span> Note on searching for critical lattice models as entropy critical points from strange correlator</p>
+<p class="p2"><br></p>
+<p class="p1">20250909</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.06906">https://arxiv.org/abs/2509.06906</a></span> Symmetry-enforced Moir ́e Topology (Yunzhe Liu, Kaijie Yang, Chao-Xing Liu, Jiabin Yu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.05558">https://arxiv.org/abs/2509.05558</a></span> Interaction-driven quantum criticality in two-dimensional quadratic band crossing semimetals with time-reversal symmetry breaking</p>
+<p class="p2"><br></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.06406">https://arxiv.org/abs/2509.06406</a></span> Euler band topology in superfluids and superconductors (Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.06879">https://arxiv.org/abs/2509.06879</a></span> Intrinsic non-Hermitian topological phases (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.05410">https://arxiv.org/abs/2509.05410</a></span> Wilson-Loop-Ideal Bands and General Idealization (Jiabin Yu, Biao Lian, Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.05620">https://arxiv.org/abs/2509.05620</a></span> Quantization of spin circular photogalvanic effect in altermagnetic Weyl semimetals (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.06028">https://arxiv.org/abs/2509.06028</a></span> Path integral approach to quantum thermalization (Alexander Altland, Kun Woo Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.05411">https://arxiv.org/abs/2509.05411</a></span> Interacting many-body non-Hermitian systems as Markov chains</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.05793">https://arxiv.org/abs/2509.05793</a></span> Spectral Methods in Complex Systems - A perspectrive</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.05435">https://arxiv.org/abs/2509.05435</a></span> A folded string dual for the Sachdev–Ye–Kitaev model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.05655">https://arxiv.org/abs/2509.05655</a></span> Quantum Phases in a Two-Dimensional Generalized interacting SSH Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.06241">https://arxiv.org/abs/2509.06241</a></span> Site Basis Excitation Ansatz for Matrix Product States (Steven R. White)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.06265">https://arxiv.org/abs/2509.06265</a></span> Generalizing the composite fermion theory for fractional Chern insulators</p>
+<p class="p2"><br></p>
+<p class="p1">20250910</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07151">https://arxiv.org/abs/2509.07151</a></span> Exploring the nature of the emergent gauge field in composite-fermion metals: A large-scale microscopic study (Zhen Bi, J. K. Jain)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07784">https://arxiv.org/abs/2509.07784</a></span> Valley Order in Moir ́e Topological Insulators (A. H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07628">https://arxiv.org/abs/2509.07628</a></span> Gauge Theory and Integrability: An Overview</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07099">https://arxiv.org/abs/2509.07099</a></span> Clifford quantum cellular automata from topological quantum field theories and invertible subalgebras</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07965">https://arxiv.org/abs/2509.07965</a></span> Symmetry TFTs for Continuous Spacetime Symmetries *** (Fabio Apruzzi, Nicola Dondi, In ̃aki Garc ́ıa Etxebarria , Ho Tat Lam , Sakura Sch ̈afer-Nameki )</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07977">https://arxiv.org/abs/2509.07977</a></span> Linking thermodynamic correlation signatures and superconductivity in twisted trilayer graphene **** (Jesse C. Hoke, Yifan Li,Yuwen Hu, Julian May-Mann, Trithep Devakul, Aaron Sharpe, Benjamin E. Feldman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07062">https://arxiv.org/abs/2509.07062</a></span> Transient localization from fractionalization: vanishingly small heat conductivity in gapless quantum magnets (Johannes Knolle, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.07360">https://arxiv.org/abs/2509.07360</a></span> Quantum Phases in Twisted Homobilayer Transition Metal Dichalcogenides (A. H. MacDonald)</p>
+<p class="p2"><br></p>
+<p class="p1">20250911</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08038">https://arxiv.org/abs/2509.08038</a></span> Free Majorana Fermion Meets Gauged Ising Conformal Field Theory on the Fuzzy Sphere (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08011">https://arxiv.org/abs/2509.08011</a></span> Machine learning applications in cold atom quantum simulators *****</p>
+<p class="p2"><br></p>
+<p class="p1">20250912</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09398">https://arxiv.org/abs/2509.09398</a></span> Relativistic Mott transition, high-order van Hove singularity, and mean-field phase diagram of twisted double bilayer WSe2 (Michael M. Scherer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08868">https://arxiv.org/abs/2509.08868</a></span> Real-Time String Dynamics in a 2 + 1D Non-Abelian Lattice Gauge Theory: String Breaking, Glueball Formation, Baryon Blockade, and Tension Reduction (Jad C. Halimeh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09083">https://arxiv.org/abs/2509.09083</a></span> Bosonic realization of SU(3) chiral Haldane phases</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08890">https://arxiv.org/abs/2509.08890</a></span> Machine learning the effects of many quantum measurements *** (Wanda Hou, Samuel J. Garratt, Norhan M. Eassa, 5 Eliott Rosenberg, Pedram Roushan, Yi-Zhuang You, Ehud Altman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09587">https://arxiv.org/abs/2509.09587</a></span> PT symmetry-enriched non-unitary criticality *** (Po-Yao Chang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09627">https://arxiv.org/abs/2509.09627</a></span> Kondo destruction quantum critical point: fixed point annihilation and thermodynamic stability **** (Yiming Wang, Lei Chen, Haoyu Hu, Ang Cai, Jianhui Dai, C. J. Bolech, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09669">https://arxiv.org/abs/2509.09669</a></span> Strong-to-Weak Symmetry Breaking Phases in Steady States of Quantum Operations (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08898">https://arxiv.org/abs/2509.08898</a></span> Fast simulation of fermions with reconfigurable qubits (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08889">https://arxiv.org/abs/2509.08889</a></span> Anomalously fast transport in non-integrable lattice gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09330">https://arxiv.org/abs/2509.09330</a></span> Superconductivity in hyperbolic spaces: Regular hyperbolic lattices and Ginzburg-Landau theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08877">https://arxiv.org/abs/2509.08877</a></span> Demystifying quantum escapism on the honeycomb lattice ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08879">https://arxiv.org/abs/2509.08879</a></span> Emanant and emergent symmetry-topological-order from low-energy spectrum ***** (Zixin Jessie Chen, O ̈mer M. Aksoy, Cenke Xu, Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09205">https://arxiv.org/abs/2509.09205</a></span> Fragmented Spin Liquid and Shadow Pinch Points in Dipole-Octupole Pyrochlore Spin Systems (Han Yan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09244">https://arxiv.org/abs/2509.09244</a></span> Matrix product state classification of 1D multipole symmetry protected topological phases</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
