20250920_daily_arXiv_update

--- a/arxiv/2025_09_arxiv.html
+++ b/arxiv/2025_09_arxiv.html
@@ -147,6 +147,64 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.08879">https://arxiv.org/abs/2509.08879</a></span> Emanant and emergent symmetry-topological-order from low-energy spectrum ***** (Zixin Jessie Chen, O ̈mer M. Aksoy, Cenke Xu, Xiao-Gang Wen)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09205">https://arxiv.org/abs/2509.09205</a></span> Fragmented Spin Liquid and Shadow Pinch Points in Dipole-Octupole Pyrochlore Spin Systems (Han Yan)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09244">https://arxiv.org/abs/2509.09244</a></span> Matrix product state classification of 1D multipole symmetry protected topological phases</p>
+<br>
+<p class="p1">20250915</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09901">https://arxiv.org/abs/2509.09901</a></span> Hard and soft phase slips in a Fabry-Pe ́rot quantum Hall interferometer (M. P. Zaletel, A. F. Young)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10000">https://arxiv.org/abs/2509.10000</a></span> Neural Scaling Laws for Deep Regression (Kyoung-Min Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09903">https://arxiv.org/abs/2509.09903</a></span> Evolution from Topological Dirac Metal to Flat-band-Induced Antiferromagnet in Layered KxNi4S2 (0≤x≤1) ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10170">https://arxiv.org/abs/2509.10170</a></span> Coarse-Grained BCFT Tensor Networks and Holographic Reflected Entropy in 3D Gravity ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10215">https://arxiv.org/abs/2509.10215</a></span> Direct evidence for the absence of coupling between shear strain and superconductivity in Sr2RuO4 (Manfred Sigrist)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10418">https://arxiv.org/abs/2509.10418</a></span> Witt Groups and Bulk-Boundary Correspondence for Stabilizer States (Bowen Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09783">https://arxiv.org/abs/2509.09783</a></span> Pseudogap-induced change in the nature of the Lifshitz transition in the two-dimensional Hubbard model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09825">https://arxiv.org/abs/2509.09825</a></span> Surface Topological Quantum Criticality II: Conformal manifolds, Isolated fixed points, and Entanglement ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09909">https://arxiv.org/abs/2509.09909</a></span> TbPt6Al3: A rare-earth-based g-wave altermagnet with a honeycomb structure</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.09983">https://arxiv.org/abs/2509.09983</a></span> Entanglement architecture of beyond-Landau quantum criticality (William Witczak-Krempa, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10438">https://arxiv.org/abs/2509.10438</a></span> Gradient-based search of quantum phases: discovering unconventional fractional Chern insulators (Andre ́ Grossi Fonseca, Eric Wang, Sachin Vaidya, Patrick J. Ledwith, Ashvin Vishwanath, Marin Soljacˇic ́)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.00765">https://arxiv.org/abs/2405.00765</a></span> Schwinger-Keldysh non-perturbative field theory of open quantum systems beyond the Markovian regime: Application to spin-boson and spin-chain-boson models</p>
+<p class="p2"><br></p>
+<p class="p1">20250916</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.11462">https://arxiv.org/abs/2509.11462</a></span> Quantum hierarchical Fokker–Planck equations with U(1) gauge fields : Application to the Aharonov–Bohm ring</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.11537">https://arxiv.org/abs/2509.11537</a></span> Generalization of the Affleck-Kennedy-Lieb-Tasaki Model for Quantum Ferromagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10602">https://arxiv.org/abs/2509.10602</a></span> A complex scalar field theory for charged fluids, superfluids, and fracton fluids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10603">https://arxiv.org/abs/2509.10603</a></span> THE CLASSIFICATION OF 3+1D SYMMETRY ENRICHED TOPOLOGICAL ORDER (MATTHEW YU)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10930">https://arxiv.org/abs/2509.10930</a></span> Correlated interlayer quantum Hall state in alternating twisted trilayer graphene (Jeil Jung, Gil Young Cho, Youngwook Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12180">https://arxiv.org/abs/2509.12180</a></span> Generalized Symmetries and Deformations of Symmetric Product Orbifolds</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.10876">https://arxiv.org/abs/2509.10876</a></span> Partition function of the Kitaev quantum double model (Steven H. Simon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.11304">https://arxiv.org/abs/2509.11304</a></span> Weak-coupling theory for partial condensation of mobile excitons</p>
+<p class="p2"><br></p>
+<p class="p1">20250917</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.02576">https://arxiv.org/abs/2504.02576</a></span> Derivation of the Landau-Zener formula via functional equations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12305">https://arxiv.org/abs/2509.12305</a></span> Phases of 2d Gauge Theories and Symmetric Mass Generation (David Tong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12304">https://arxiv.org/abs/2509.12304</a></span> Higher-Form Anomalies on Lattices (Yitao Feng, Ryohei Kobayashi, Yu-An Chen, Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12311">https://arxiv.org/abs/2509.12311</a></span> Antiferromagnetism and Stripe Channel Order in the SU(N)-Symmetric Two-Channel Kondo Lattice Model (Fakher F. Assaad)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12320">https://arxiv.org/abs/2509.12320</a></span> Putting a new spin on the incommensurate Kekul ́e spiral: from spin-valley locking and collective modes to fermiology and implications for superconductivity (Ziwei Wang, Glenn Wagner, Yves H. Kwan, Nick Bultinck, Steven H. Simon, S.A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12731">https://arxiv.org/abs/2509.12731</a></span> Ginzburg-Landau Formalism in Curved Spacetime</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12988">https://arxiv.org/abs/2509.12988</a></span> Non-Abelian Gauge Theory of Spin Triplet Superconductivity and Spin Triplet Magnon Spintronics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.12260">https://arxiv.org/abs/2509.12260</a></span> Entanglement Suppression in Quantum Field Theories: Holography, Chaos, and Mixed-State Dynamics</p>
+<p class="p2"><br></p>
+<p class="p1">20250918</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13554">https://arxiv.org/abs/2509.13554</a></span> Axial Hall Effect in Altermagnetic Lieb Lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13407">https://arxiv.org/abs/2509.13407</a></span> Nematic Enhancement of Superconductivity in Multilayer Graphene via Quantum Geometry *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13406">https://arxiv.org/abs/2509.13406</a></span> Free mutual information and higher-point OTOCs ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13423">https://arxiv.org/abs/2509.13423</a></span><span class="Apple-converted-space">  </span>Computational complexity of Berry phase estimation in topological phases of matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13440">https://arxiv.org/abs/2509.13440</a></span> Simulation of bilayer Hamiltonians based on monitored quantum trajectories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14196">https://arxiv.org/abs/2509.14196</a></span> Quantum Utility in Simulating the Real-time Dynamics of the Fermi-Hubbard Model using Superconducting Quantum Computers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13618">https://arxiv.org/abs/2509.13618</a></span> Magnetic phase transitions driven by quantum geometry (Chang-geun Oh, Taisei Kitamura, Akito Daido, Jun-Won Rhim, Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13900">https://arxiv.org/abs/2509.13900</a></span> Fate of Topological Dirac Magnons in van der Waals Ferromagnets at Finite Temperature (Johannes Knolle, Alexander Mook)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13977">https://arxiv.org/abs/2509.13977</a></span> Low-dimensional Heisenberg magnets: Riemann zeta function regularization ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.13838">https://arxiv.org/abs/2509.13838</a></span> Spin-Polarized Josephson Supercurrent in Nodeless Altermagnets</p>
+<p class="p2"><span class="Apple-converted-space"> </span></p>
+<p class="p1">20250919</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15064">https://arxiv.org/abs/2509.15064</a></span> Twist fields in many-body physics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.15094">https://arxiv.org/abs/2509.15094</a></span> Diagrammatic bosonization, aspects of criticality, and the Hohenberg-Mermin-Wagner Theorem in parquet approaches ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14307">https://arxiv.org/abs/2509.14307</a></span><span class="Apple-converted-space">  </span>Accurate bootstrap bounds from optimal interpolation (David Simmons-Duffin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14314">https://arxiv.org/abs/2509.14314</a></span> Anyonic membranes and Pontryagin statistics (Yitao Feng, Hanyu Xue, Yuyang Li, Meng Cheng, Ryohei Kobayashi, Po-Shen Hsin, Yu-An Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14315">https://arxiv.org/abs/2509.14315</a></span> Theory of Sondheimer magneto-oscillations beyond semiclassical limit</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14344">https://arxiv.org/abs/2509.14344</a></span> Defects in Wigner crystals: fracton-elasticity duality and vacancy proliferation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14716">https://arxiv.org/abs/2509.14716</a></span> Detection of ferroic octupole ordering in d-wave altermagnetic rutile-type compounds</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14306">https://arxiv.org/abs/2509.14306</a></span> From geometry to cosmology: a pedagogical review of inflation in curvature, torsion, and extended gravity theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14395">https://arxiv.org/abs/2509.14395</a></span> Non-invertible Chiral Symmetry and Axions under Electromagnetic Duality (Gongjun Choi, Tony Gherghetta, John Terning)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.14288">https://arxiv.org/abs/2509.14288</a></span> James Burkett Hartle: a Biographical Memoir (Gary T. Horowitz, Kip S. Thorne)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
